# bc-npp-database

./: .gitignore  AGENTS.md  CHANGE_LOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: canonical-pipeline.rst  conf.py  data-standards.rst  development-workflow.rst  eflora-attribute-boost.rst  evidence-hardening.rst  flagship-species.rst  foundation-release.rst  index.rst  installation.rst  pollinator-module.rst  project-brief.rst  provider-approvals.rst  provider-ingestion-pipeline.rst  provider-review-workflow.rst  provider-sandbox.rst  release-checklist.rst  roadmap.rst  scoring-framework.rst  seed-archives.rst  source-attribution.rst  source-policy.rst  usability-layer.rst  vancouver-poc-list.rst  workbook-normalization.rst
examples/: p19_provider_source_sweep_freshforge.yaml  p21_downloaded_provider_approval_freshforge.yaml  p3_canonical_pipeline_freshforge.yaml  p4_scoring_freshforge.yaml  p5_foundation_release_dry_run.yaml  provider_approval_manifest.csv
planning/: bootstrap_rationale.md  canonical_schema_direction.md  delivery_success_patterns.md  ecosystem_integration_hooks.md  lmh77_extraction_plan.md  mowability_score_ideas.md  p16_provider_scraping_sandbox_plan.md  scoring_framework_direction.md  seed_archive_inventory.md  source_attribution_model.md  v1_0_0a_foundation_scope.md  workbook_normalization_contract.md
schemas/: lookups_seed.csv  provider_approval_manifest_columns.csv  provider_sandbox_contracts.csv  source_provider_registry_columns.csv  vancouver_provider_eligibility_rules.csv
scripts/: apply-downloaded-provider-approval.cmd  apply-downloaded-provider-approval.ps1  build-provider-source-review.cmd  build-provider-source-review.ps1
tests/: test_canonical.py  test_cli.py  test_docs.py  test_eflora.py  test_eflora_cli.py  test_evidence_hardening.py  test_foundation.py  test_p21_runner_artifacts.py  test_p29_freshforge_workflow.py  test_package_metadata.py  test_pollinators.py  test_provider_approval_review.py  test_provider_approvals.py  (+11 more)
(+95 files in other folders)
