[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bc-npp-database"
version = "0.1.0a0"
description = "Evidence-based native plant and pollinator decision-support database for coastal British Columbia."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "UBC FRESH Lab"}]
keywords = [
    "native-plants",
    "pollinators",
    "ecological-data",
    "british-columbia",
    "urban-landscapes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "openpyxl>=3.1",
    "rich>=13",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/UBC-FRESH/bc-npp-database"
Repository = "https://github.com/UBC-FRESH/bc-npp-database"
Issues = "https://github.com/UBC-FRESH/bc-npp-database/issues"
Changelog = "https://github.com/UBC-FRESH/bc-npp-database/blob/main/CHANGE_LOG.md"

[project.optional-dependencies]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.5",
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
    "twine>=5",
]
quality = [
    "ruff>=0.5",
]
release = [
    "build>=1.2",
    "twine>=5",
]
test = [
    "pytest>=8",
]

[project.scripts]
bc-nppd = "bc_npp_database.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bc_npp_database = ["schemas/*.csv"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
